# PPC_FROI_Project

./: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
data/: README.md
docs/source/: conf.py
docs/source/api/: modules.rst  ppc_froi_project.rst
notebooks/: Dictionnaries.ipynb  Exercices_Tests.ipynb  Lists.ipynb  README.md  Reaction_Functions.ipynb  Reactions_Tests.ipynb  Report.ipynb
src/ppc_froi_project/: Dictionnaries_python.py  Lists_python.py  Reaction_Functions_python.py  Report.py  __init__.py
tests/: test_example_module.py  test_function_main_code.py  test_reaction_function.py
