[build-system] 
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "PPC_FROI_Project"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
description = "Programme that can apply some chemical reaction"
dependencies = [
    "rdkit",
    "IPython",
    "pathlib",
]
authors = [
    {name = "Arthur Bongini", email = "arthur.bongini@epfl.ch"}, {name = "Emna Belgharbia", email = "emna.belgharbia@epfl.ch"}, {name = "Oriane Azalbert", email = "oriane.azalbert@epfl.ch"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version"]

[project.urls]
source = "https://github.com/abongini/PPC_FROI_Project"
tracker = "https://github.com/abongini/PPC_FROI_Project/issues"

[project.optional-dependencies]
test = [
    "hypothesis",
    "pytest",
    "pytest-cov",
    "tox",
    "genbadge[coverage]",
]
doc = [
    "furo",
    "myst-parser",
    "sphinx>=5",
    "sphinx-copybutton",
]

[tool.hatch.version]
path = "src/ppc_froi_project/__init__.py"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    '__init__.py'
]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
]
